renombrando_titulos de barberia alura

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Barberia Alura</title>
+        <title>Barberia de ANA</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="styles.css">
@@ -27,7 +27,7 @@
         <img class="banner" src="banner/banner.jpg" alt="Utensilios de un barbero">
         <main>
             <section class="principal">
-                <h2 class="tituloPrincipal">Sobre la Barbería Alura</h2>
+                <h2 class="tituloPrincipal">Sobre la Barbería de ANA</h2>
                 <img class="utensilios" src="imagenes/utensilios[1].jpg" alt="">
                 <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
                 <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
